--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  /* background: radial-gradient(circle, #eeeeee 0%, #eeeeee 100%); */
+  background: #fafafa;
 }
 
 code {
@@ -12,3 +14,6 @@ code {
     monospace;
 }
 
+.container {
+  /* width: 1000px; */
+}
